// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication API canary Blog setup complete setup 1`] = `
Object {
  "users": Array [
    Object {
      "created_at": Any<Date>,
      "updated_at": Any<Date>,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup complete setup 2`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "434",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup is setup? no 1`] = `
Object {
  "setup": Array [
    Object {
      "status": false,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup is setup? no 2`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "28",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup is setup? yes 1`] = `
Object {
  "setup": Array [
    Object {
      "status": true,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup is setup? yes 2`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "27",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup update setup 1`] = `
Object {
  "users": Array [
    Object {
      "created_at": Any<String>,
      "last_seen": Any<String>,
      "updated_at": Any<String>,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 2`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "506",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup update setup 3`] = `
Object {
  "invitation": Array [
    Object {
      "valid": true,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 4`] = `
Object {
  "invitation": Array [
    Object {
      "valid": false,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 5`] = `
Object {
  "invitation": Array [
    Object {
      "message": "Invitation accepted.",
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 6`] = `
Object {
  "passwordreset": Array [
    Object {
      "message": "Password changed successfully.",
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 7`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "64",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup update setup 8`] = `
Object {
  "errors": Array [
    Object {
      "id": Any<String>,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 9`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "314",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup update setup 10`] = `
Object {
  "errors": Array [
    Object {
      "id": Any<String>,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 11`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "260",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup update setup 12`] = `
Object {
  "errors": Array [
    Object {
      "id": Any<String>,
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 13`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "274",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup update setup 14`] = `
Object {
  "passwordreset": Array [
    Object {
      "message": "Check your email for further instructions.",
    },
  ],
}
`;

exports[`Authentication API canary Blog setup update setup 15`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "76",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Authentication API canary Blog setup update setup 16`] = `Object {}`;

exports[`Authentication API canary Blog setup update setup 17`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "connection": "close",
  "content-length": "2",
  "content-type": "application/json; charset=utf-8",
  "date": Any<String>,
  "etag": Any<String>,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
